Fixed die drawer collapsing.

--- a/src/style/components/_character.scss
+++ b/src/style/components/_character.scss
@@ -698,6 +698,10 @@ body > form:only-child section .character-page,
   overflow: hidden;
   padding: 0.5em;
 
+  .tgrid {
+    overflow: hidden;
+  }
+
   i {
     line-height: 1.25;
   }
